# PenGUIn

./: .gitignore  CMakeLists.txt  README.md  devLog.txt  online resources.txt
src/: color.c  color.h  config.c  lv_conf.h  lv_port_disp.c  lv_port_disp.h  main.c  nrf52840_HAL.c  nrf52840_HAL.h  penGUIn.c  penGUIn.h  util.h
src/fonts/Monospace/: reg_24pt.h
src/fonts/OpenSans/: reg_24pt.h
src/hx8357D/: 16bit_color.h  analog.c  analog.h  commands.h  def_font.h  nrf52840_util.c  nrf52840_util.h  spi_driver.c  spi_driver.h  tft.c  tft.h  touchscreen.c  touchscreen.h
src/lib/: mip.c  mip.h
src/penManager/: penGUIn.c  penGUIn.h
src/penSDK/: color.c  color.h
src/penSDK/fonts/: font.h
src/penSDK/fonts/PermMarker/: reg_24pt.h
src/penSDK/lib/: mip.c  text.c  text.h
src/touchscreen/: res4wire.c  res4wire.h
src/util/: list.h
